test_suite/alan-2022-examples/failing/007810_mutation.alan
source uQ86a begin while 71 do function end end
